[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "huawei-lte-exporter"
version         = "1.0.0"
description     = "Prometheus exporter for Huawei LTE routers via huawei-lte-api"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
authors         = [{ name = "Ferabeo", email = "postmaster@imbo.fr" }]
keywords        = ["prometheus", "huawei", "lte", "4g", "exporter", "monitoring"]
dependencies = [
    "huawei-lte-api>=1.10.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.scripts]
huawei-lte-exporter = "huawei_lte_exporter.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src", "tests"]
addopts    = "-v --tb=short --cov=huawei_lte_exporter --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["huawei_lte_exporter"]
branch = true